added method prediction

--- a/headTohead.ipynb
+++ b/headTohead.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "6ee65e6f",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "fc86dab5",
    "metadata": {},
    "outputs": [
@@ -27,11 +27,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted winner: Jack Della Maddalena\n",
-      "Belal Muhammad win probability: 49.39%\n",
-      "Jack Della Maddalena win probability: 50.61%\n",
-      "Belal Muhammad betting odds: +102\n",
-      "Jack Della Maddalena betting odds: -102\n"
+      "Predicted winner: Julian Erosa\n",
+      "Julian Erosa win probability: 57.53%\n",
+      "Melquizael Costa win probability: 42.47%\n",
+      "Julian Erosa betting odds: -135\n",
+      "Melquizael Costa betting odds: +135\n"
      ]
     }
    ],
@@ -384,7 +384,7 @@
     "    }\n",
     "    return result\n",
     "\n",
-    "prediction = predict_winner('Belal Muhammad', 'Jack Della Maddalena', '2025-05-10', 'Jason Herzog')\n",
+    "prediction = predict_winner('Julian Erosa', 'Melquizael Costa', '2025-05-17', 'Jason Herzog')\n",
     "print(f\"Predicted winner: {prediction['predicted_winner']}\")\n",
     "print(f\"{prediction['p1_name']} win probability: {prediction['p1_win_probability']:.2%}\")\n",
     "print(f\"{prediction['p2_name']} win probability: {prediction['p2_win_probability']:.2%}\")\n",
