features good copy

--- a/headTohead.ipynb
+++ b/headTohead.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "id": "6ee65e6f",
    "metadata": {},
    "outputs": [],
@@ -12,14 +12,15 @@
     "import xgboost as xgb \n",
     "\n",
     "loaded_model = xgb.XGBClassifier()\n",
-    "loaded_model.load_model('xgb_model.json')\n",
+    "loaded_model.load_model('xgb_model_good.json')\n",
     "cleaned_df = pd.read_csv('ufc_cleaned.csv')\n",
-    "fighters_df = pd.read_csv('ufc_fighters_cleaned.csv')"
+    "fighters_df = pd.read_csv('ufc_fighters_cleaned.csv')\n",
+    "features_df = pd.read_csv('ufc_features.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "id": "fc86dab5",
    "metadata": {},
    "outputs": [
