lambda scraper done

--- a/features.ipynb
+++ b/features.ipynb
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "dd7bab92",
    "metadata": {},
    "outputs": [
@@ -2560,7 +2560,7 @@
     "  cleaned_df[diff_col] = cleaned_df[p1_col] - cleaned_df[p2_col]\n",
     "\n",
     "\n",
-    "#find says days since last fight\n",
+    "#find  days since last fight\n",
     "from collections import defaultdict\n",
     "\n",
     "def calculate_days_since_last_fight(df):\n",
@@ -2791,7 +2791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ff138171",
    "metadata": {},
    "outputs": [
@@ -5136,7 +5136,6 @@
     "     'Decision - Split': 'Decision',\n",
     "     'Decision - Unanimous': 'Decision'}\n",
     ")\n",
-    "\n",
     "# Group the 'TKO/KO' types\n",
     "methods_df['method_grouped'] = methods_df['method_grouped'].replace(\n",
     "    {\"TKO - Doctor's Stoppage\": \"KO/TKO\"}\n",
