saving before modyfing training methods gppd

--- a/features.ipynb
+++ b/features.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "4a2b4278",
    "metadata": {},
    "outputs": [
@@ -1088,7 +1088,7 @@
        "4        0.00        0.00        0.20           1.4  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "dd7bab92",
    "metadata": {},
    "outputs": [
@@ -2528,7 +2528,7 @@
        "11                        NaN                        NaN  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2679,7 +2679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "8227a28d",
    "metadata": {},
    "outputs": [],
@@ -2791,7 +2791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "ff138171",
    "metadata": {},
    "outputs": [
@@ -5119,7 +5119,7 @@
        "4                   0              0              0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5187,7 +5187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "7fa1b4b1",
    "metadata": {},
    "outputs": [
@@ -6666,7 +6666,7 @@
        "8165                    0.098657  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6713,7 +6713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "36b71899",
    "metadata": {},
    "outputs": [],
@@ -6727,8 +6727,7 @@
     "diff_cols = [col for col in result_df.columns if 'diff' in col]\n",
     "\n",
     "# Columns that are not swapped (e.g. referee, fight_id if present, etc.)\n",
-    "other_cols = [col for col in result_df.columns \n",
-    "              if col not in p1_cols + p2_cols + ['winner'] + diff_cols]\n",
+    "other_cols = [col for col in result_df.columns if col not in p1_cols + p2_cols + ['winner'] + diff_cols]\n",
     "\n",
     "# Prepare swapped dataframe\n",
     "swapped_df = result_df.copy()\n",
@@ -6766,7 +6765,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
+   "id": "e915a5bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Identify p1 and p2 columns\n",
+    "p1_cols = [col for col in methods_df.columns if col.startswith('p1_')]\n",
+    "p2_cols = [col for col in methods_df.columns if col.startswith('p2_')]\n",
+    "\n",
+    "# Identify difference columns\n",
+    "diff_cols = [col for col in methods_df.columns if 'diff' in col]\n",
+    "\n",
+    "# Columns that are not swapped (e.g. referee, fight_id if present, etc.)\n",
+    "other_cols = [col for col in methods_df.columns if col not in p1_cols + p2_cols + ['winner'] + diff_cols]\n",
+    "\n",
+    "# Prepare swapped dataframe\n",
+    "swapped_df = methods_df.copy()\n",
+    "\n",
+    "# Swap p1 and p2 columns\n",
+    "swapped_df[p1_cols] = methods_df[p2_cols].values\n",
+    "swapped_df[p2_cols] = methods_df[p1_cols].values\n",
+    "\n",
+    "# Invert all diff columns\n",
+    "for col in diff_cols:\n",
+    "    swapped_df[col] = -methods_df[col]\n",
+    "\n",
+    "# Swap fighter names\n",
+    "if 'p1_fighter' in methods_df.columns and 'p2_fighter' in methods_df.columns:\n",
+    "    swapped_df['p1_fighter'] = methods_df['p2_fighter']\n",
+    "    swapped_df['p2_fighter'] = methods_df['p1_fighter']\n",
+    "\n",
+    "# Adjust winner label\n",
+    "def swap_winner(val):\n",
+    "    if val == 1:\n",
+    "        return 0\n",
+    "    elif val == 0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return val\n",
+    "\n",
+    "swapped_df['winner'] = methods_df['winner'].apply(swap_winner)\n",
+    "\n",
+    "# Concatenate original and swapped dataframes\n",
+    "method_aug_df = pd.concat([methods_df, swapped_df], ignore_index=True)\n",
+    "\n",
+    "# Sort by event_date\n",
+    "method_aug_df.sort_values(by='event_date', inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "7445a087",
    "metadata": {},
    "outputs": [],
@@ -6774,7 +6826,8 @@
     "\n",
     "result_df.to_csv('ufc_features.csv', index=False)\n",
     "methods_df.to_csv('ufc_methods.csv', index=False)\n",
-    "aug_df.to_csv('ufc_aug.csv', index=False)"
+    "aug_df.to_csv('ufc_aug.csv', index=False)\n",
+    "method_aug_df.to_csv('ufc_method_aug.csv', index=False)"
    ]
   },
   {
