--- a/predictMethod.ipynb
+++ b/predictMethod.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "id": "05a1c570",
    "metadata": {},
    "outputs": [
@@ -1088,7 +1088,7 @@
        "4        0.00        0.00        0.20           1.4  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "id": "ebdbcb37",
    "metadata": {},
    "outputs": [
@@ -1120,8 +1120,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.3670325  0.52922165 0.10374584]]\n",
-      "{'Decision': {'p1': '+172', 'p2': '-273'}, 'KO/TKO': {'p1': '-112', 'p2': '+278'}, 'Submission': {'p1': '+864', 'p2': '+26175'}}\n"
+      "[[0.6453875  0.34518653 0.00942606]]\n",
+      "{'Decision': {'p1': '-182', 'p2': '-155'}, 'KO/TKO': {'p1': '+190', 'p2': '+398'}, 'Submission': {'p1': '+10509', 'p2': '+422'}}\n"
      ]
     }
    ],
